refactor: Theme changed to deep space

--- a/src/auth/pages/docs.html
+++ b/src/auth/pages/docs.html
@@ -20,7 +20,7 @@
 
       Scalar.createApiReference('#app', {
         url: '/api-spec/json',
-        theme: 'kepler',
+        theme: 'deepSpace',
         forceDarkModeState: 'dark',
         persistAuth: true,
         authentication: {
