refactor: developer tools hidden

--- a/src/auth/pages/docs.html
+++ b/src/auth/pages/docs.html
@@ -20,6 +20,7 @@
 
       Scalar.createApiReference('#app', {
         url: '/api-spec/json',
+        showDeveloperTools: 'never',
         theme: 'deepSpace',
         forceDarkModeState: 'dark',
         persistAuth: true,
