feat: hide Scalar watermark

--- a/src/pages/docs.html
+++ b/src/pages/docs.html
@@ -24,6 +24,7 @@
         theme: 'deepSpace',
         forceDarkModeState: 'dark',
         persistAuth: true,
+        customCss: 'a[href="https://www.scalar.com"] { display: none !important; }',
         authentication: {
           preferredSecurityScheme: 'bearerAuth',
           securitySchemes: {
