--- a/src/auth/pages/login.html
+++ b/src/auth/pages/login.html
@@ -612,7 +612,9 @@
         if (error) {
             const messages = {
                 no_access: "You do not have access to this resource",
-                auth_failed: "Authentication failed",
+                auth_failed: "Authentication failed. Please try again",
+                invalid_token: "You do not have access to this application",
+                no_tokens: "No authentication tokens received. Please try again",
                 access_denied: "Access was denied",
             };
             errorEl.textContent = messages[error] || "Login failed";
