--- a/src/auth/pages/callback.html
+++ b/src/auth/pages/callback.html
@@ -3,6 +3,7 @@
   <head>
     <title>Authenticating...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="https://content.timbal.ai/assets/favicon.png" />
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body {
