--- a/src/pages/docs.html
+++ b/src/pages/docs.html
@@ -4,6 +4,7 @@
     <title>API Documentation</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="https://content.timbal.ai/assets/favicon.png" />
     <script src="https://cdn.jsdelivr.net/npm/@scalar/api-reference"></script>
     <style>
       .logout-btn {
