--- a/src/pages/docs.html
+++ b/src/pages/docs.html
@@ -1,62 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <title>API Documentation</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="https://content.timbal.ai/assets/favicon.png" />
-    <script src="https://cdn.jsdelivr.net/npm/@scalar/api-reference"></script>
-    <style>
-      .logout-btn {
-        position: fixed;
-        bottom: 16px;
-        right: 16px;
-        padding: 6px 12px;
-        font-size: 12px;
-        color: #71717a;
-        background: transparent;
-        border: 1px solid #27272a;
-        border-radius: 6px;
-        cursor: pointer;
-        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-        transition: all 0.15s;
-        z-index: 1000;
-      }
-      .logout-btn:hover {
-        color: #a1a1aa;
-        border-color: #3f3f46;
-        background: #18181b;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <button class="logout-btn" onclick="logout()">Sign out</button>
-    <script>
-      function logout() {
-        localStorage.removeItem('refresh_token');
-        fetch('/auth/logout', { method: 'POST', credentials: 'same-origin' })
-          .then(() => window.location.href = '/auth/login');
-      }
+    <head>
+        <title>API Documentation</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            rel="icon"
+            type="image/png"
+            href="https://content.timbal.ai/assets/favicon.png"
+        />
+        <script src="https://cdn.jsdelivr.net/npm/@scalar/api-reference"></script>
+        <style>
+            .logout-btn {
+                position: fixed;
+                bottom: 16px;
+                right: 16px;
+                padding: 6px 12px;
+                font-size: 12px;
+                color: #71717a;
+                background: transparent;
+                border: 1px solid #27272a;
+                border-radius: 6px;
+                cursor: pointer;
+                font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+                transition: all 0.15s;
+                z-index: 1000;
+            }
+            .logout-btn:hover {
+                color: #a1a1aa;
+                border-color: #3f3f46;
+                background: #18181b;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="app"></div>
+        <button class="logout-btn" onclick="logout()">Sign out</button>
+        <script>
+            function logout() {
+                localStorage.removeItem("refresh_token");
+                fetch("{{PREFIX}}/auth/logout", {
+                    method: "POST",
+                    credentials: "same-origin",
+                }).then(() => (window.location.href = "{{PREFIX}}/auth/login"));
+            }
 
-      Scalar.createApiReference('#app', {
-        url: '/api-spec/json',
-        showDeveloperTools: 'never',
-        theme: 'deepSpace',
-        forceDarkModeState: 'dark',
-        persistAuth: true,
-        customCss: 'a[href="https://www.scalar.com"] { display: none !important; }',
-        hideClientButton: true,
-      });
+            Scalar.createApiReference("#app", {
+                url: "{{PREFIX}}/api-spec/json",
+                showDeveloperTools: "never",
+                theme: "deepSpace",
+                forceDarkModeState: "dark",
+                persistAuth: true,
+                customCss:
+                    'a[href="https://www.scalar.com"] { display: none !important; }',
+                hideClientButton: true,
+            });
 
-      // Hide Ask AI button
-      const hideAskAI = () => {
-        document.querySelectorAll('span, button').forEach(el => {
-          if (el.textContent?.trim() === 'Ask AI') el.style.display = 'none';
-        });
-      };
-      setTimeout(hideAskAI, 500);
-      new MutationObserver(hideAskAI).observe(document.body, { childList: true, subtree: true });
-    </script>
-  </body>
+            // Hide Ask AI button
+            const hideAskAI = () => {
+                document.querySelectorAll("span, button").forEach((el) => {
+                    if (el.textContent?.trim() === "Ask AI")
+                        el.style.display = "none";
+                });
+            };
+            setTimeout(hideAskAI, 500);
+            new MutationObserver(hideAskAI).observe(document.body, {
+                childList: true,
+                subtree: true,
+            });
+        </script>
+    </body>
 </html>
