Included prefix on server url

--- a/src/pages/docs.html
+++ b/src/pages/docs.html
@@ -54,6 +54,7 @@
                 customCss:
                     'a[href="https://www.scalar.com"] { display: none !important; }',
                 hideClientButton: true,
+                servers: [{ url: window.location.origin + "{{PREFIX}}" }],
             });
 
             // Hide Ask AI button
